logs/django-temporal.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_temporal'...
Listing './lib/python3.5/site-packages/django_temporal/db'...
Listing './lib/python3.5/site-packages/django_temporal/db/backends'...
Listing './lib/python3.5/site-packages/django_temporal/db/backends/postgresql'...
Listing './lib/python3.5/site-packages/django_temporal/db/models'...
Compiling './lib/python3.5/site-packages/django_temporal/db/models/__init__.py'...
***   File "./lib/python3.5/site-packages/django_temporal/db/models/__init__.py", line 82
    print 'South introspection rules included'
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_temporal/db/models/fields.py'...
***   File "./lib/python3.5/site-packages/django_temporal/db/models/fields.py", line 14
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_temporal/db/models/sql'...
Compiling './lib/python3.5/site-packages/django_temporal/utils.py'...
***   File "./lib/python3.5/site-packages/django_temporal/utils.py", line 66
    print 'STARTING STATE'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_temporal-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
